--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "pnpm tsx ./src/app.ts",
-    "dev": "pnpm tsx watch ./src/app.ts"
+    "dev": "pnpm tsx watch ./src/app.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Emre SEFEROĞLU",
